--- a/pasta-frontend/src/html/dashboard/navigation.html
+++ b/pasta-frontend/src/html/dashboard/navigation.html
@@ -34,6 +34,7 @@
                     <li><a href="dashboard_2.html">Activity Logs</a></li>
                 </ul>
             </li>
-        </ul>
+		</ul>
+		navigation
     </div>
 </nav>
