--- a/pasta-frontend/src/html/dashboard3.html
+++ b/pasta-frontend/src/html/dashboard3.html
@@ -22,16 +22,7 @@
 
 <body class="fixed-nav">
     <div id="wrapper">
-        <div id="top-navbar" class="row" data-include="/dashboard/topnav?stack={{stack}}"></div>
-        <div id="page-wrapper" class="cobalt-bg dashboard-1 navigation">
-            <div id="navigation" class="navigation" data-include='/dashboard/navigation'></div>
-            <div id="content" class="row border-bottom white-bg dashboard-header content" data-include='{{content}}'></div>
-        </div>
-        <div id="help" class="row help" style="display:none" loading='{{help}}'></div>
-    </div>
-    <div id="chat"></div>
-	<div id="right-sidebar" data-lz-include="/common/right-sidebar.html" ></div>
-	dfsdjkfkhskhfsdkjhfjkshskdjsdshjshskhfskj
+        dashboard3
     </div>
 
     <!-- Mainly scripts -->
