--- a/pasta-frontend/src/html/project/create.html
+++ b/pasta-frontend/src/html/project/create.html
@@ -73,7 +73,9 @@
                     <button type="reset" class="btn btn-default">Cancel</button>
                 </div>
             </div>
-        </form>
+		</form>
+		
+		서비스 추가
     </div>
 
     <!-- build:js /js/common.min.js -->
