--- a/pasta-frontend/src/html/dashboard2.html
+++ b/pasta-frontend/src/html/dashboard2.html
@@ -23,6 +23,19 @@
 <body class="fixed-nav">
     <div id="wrapper">
 	 	dashboard2
+	 	dashboard2
+	 	dashboard2
+	 	dashboard2
+	 	dashboard2
+	 	dashboard2
+	 	dashboard2
+	 	dashboard2
+	 	dashboard2
+	 	dashboard2
+	 	dashboard2
+	 	dashboard2
+	 	dashboard2
+	 	dashboard2
     </div>
 
     <!-- Mainly scripts -->
