--- a/pasta-frontend/src/html/dashboard.html
+++ b/pasta-frontend/src/html/dashboard.html
@@ -31,6 +31,8 @@
     </div>
     <div id="chat"></div>
     <div id="right-sidebar" data-lz-include="/common/right-sidebar.html" ></div>
+	<div id="right-sidebar" data-lz-include="/common/right-sidebar.html" ></div>
+	dfsdjkfkhskhfsdkjhfjkshskdjsdshjshskhfskj dfsdjkfkhskhfsdkjhfjkshskdjsdshjshskhfskj dfsdjkfkhskhfsdkjhfjkshskdjsdshjshskhfskj dfsdjkfkhskhfsdkjhfjkshskdjsdshjshskhfskj dfsdjkfkhskhfsdkjhfjkshskdjsdshjshskhfskj dfsdjkfkhskhfsdkjhfjkshskdjsdshjshskhfskj dfsdjkfkhskhfsdkjhfjkshskdjsdshjshskhfskj
     </div>
 
     <!-- Mainly scripts -->
